Fix vertical alignment in table views

--- a/desktop/src/main/java/bisq/desktop/bisq.css
+++ b/desktop/src/main/java/bisq/desktop/bisq.css
@@ -813,6 +813,7 @@ textfield */
 
 .table-view .table-cell {
     -fx-alignment: center;
+    -fx-padding: 3 0 2 0;
 }
 
 #addressColumn {
